Fix home page spacing on client

--- a/client/src/components/pages/Home/Home.module.scss
+++ b/client/src/components/pages/Home/Home.module.scss
@@ -91,6 +91,10 @@
 // section content (post selling points)
 //
 
+.bottomDivider {
+  margin-bottom: var(--vertical-spacer-large);
+}
+
 .section,
 .sectionReverse {
   display: grid;
